# tiger

./: .gitignore  dune  dune-project  queens.asm  runtime.c  test.tig  tigerc.opam
lib/: driver.ml  dune
lib/agnostic/: abstractCodegen.ml  abstractFrame.ml  assem.ml  canon.ml  canon.mli  dune  errorMsg.ml  errorMsg.mli  pointerMap.ml  prtree.ml  symbol.ml  symbol.mli  temp.ml  temp.mli  tree.ml
lib/backend/: codegen.ml  color.ml  color.mli  dune  fGraph.ml  fGraph.mli  frame.ml  liveness.ml  liveness.mli  prgraph.ml  regAlloc.ml  regAlloc.mli
lib/backend/x86/: dune  x86Frame.ml  x86Frame.mli  x86Gen.ml
lib/frontend/: absyn.ml  dune  env.ml  env.mli  findEscape.ml  lexer.mll  parser.mly  prabsyn.ml  semant.ml  semant.mli  translate.ml  translate.mli  types.ml
lib/util/: dune  util.ml
programs/: death.tig
runtime/: Makefile  dune  runtime.c
test/: dune
test.t/: dune  dune-project  run.t
test/test.t/: run.t
